<resources>
    <string name="app_name">Grotesque Gecko</string>

    <!-- Bottom Navigation -->
    <string name="bottom_navigation_pictures">Képek</string>
    <string name="bottom_navigation_user">Felhasználó</string>

    <!-- Login & Registration -->
    <string name="login_fragment_enter_your_email">Email cím</string>
    <string name="login_fragment_enter_your_username">Felhasználónév</string>
    <string name="login_fragment_enter_your_email_or_username">Email cím/ felhasználónév</string>
    <string name="login_fragment_password">Jelszó</string>
    <string name="login_fragment_password_again">Jelszó mégegyszer</string>
    <string name="login_fragment_log_in_button">Bejelentkezés</string>
    <string name="login_fragment_not_registered">Még nem regisztráltál? Itt regisztrálj</string>
    <string name="login_fragment_registered">Már regisztráltál? Bejelentkezés itt</string>
    <string name="login_fragment_register_user_button">Regisztrálás</string>
    <string name="login_fragment_email_required">Az email cím megadása kötelező!</string>
    <string name="login_fragment_enter_valid_email">Valódi email címet adjon meg!</string>
    <string name="login_fragment_username_required">A felhasználónév megadása kötelező!</string>
    <string name="login_fragment_username_minimum_length">A felhasználónév vagy email cím minimum 4 karakter!</string>
    <string name="login_fragment_password_required">A jelszó megadása kötelező!</string>
    <string name="login_fragment_password_minimum_length">A jelszó minimum 4 karakter!</string>
    <string name="login_fragment_passwords_equality">A két jelszó nem egyezik meg!</string>
    <string name="login_fragment_something_went_wrong">Hiba történt, kérlek próbáld újra a bejelentkezést.</string>

    <!-- Forgotten Password -->
    <string name="login_fragment_forgotten_password">Forgot your password? \nAsk for a new one.</string>
    <string name="login_fragment_forgotten_password_title">Please add your email and your username</string>
    <string name="login_fragment_forgotten_password_ok">OK</string>
    <string name="login_fragment_forgotten_password_cancel">Cancel</string>
    <string name="login_fragment_forgotten_password_dialog_title">New password</string>
    <string name="login_fragment_forgotten_password_dialog_message">Your password will be emailed to you. \nPlease fill the email and username fields.</string>
    <string name="login_fragment_forgotten_password_dialog_send_button">Küldés</string>
    <string name="login_fragment_forgotten_password_password_reset_was_successful">Password reset was successfully.</string>
    <string name="login_fragment_forgotten_password_password_reset_was_not_successful">Something went wrong during the password reset. Please try it again.</string>

    <!-- Test user -->
    <string name="login_fragment_test_password">11111111</string>
    <string name="login_fragment_test_email">sophie</string>

    <!--Logout-->
    <string name="logout_title">Kijelentkezés</string>
    <string name="logout_text">Biztos ki szeretnél lépni?</string>
    <string name="logout_dialog_ok">Igen</string>
    <string name="logout_dialog_cancel">Nem</string>

    <!-- Caff Searcher -->
    <string name="caff_searcher_page_title">Caff kereső</string>
    <string name="caff_searcher_empty_list_text">CAFF files</string>

    <!-- Caff Details -->
    <string name="caff_details_page_title">Részletek</string>
    <string name="add_new_caff_page_title">Új caff</string>
    <string name="caff_searcher_my_caffs">Saját CAFF-ok</string>
    <string name="caff_details_something_went_wrong_during_loading_caffs_datas">Hiba történt az adatok betöltése közben.</string>

    <!-- Comments -->
    <string name="comment">Komment</string>
    <string name="add_new_comment_page_title">Új Komment</string>
    <string name="comment_fragment_something_went_wrong">Hiba történt, kérlek próbáld újra</string>
    <string name="comment_fragment_comment_required">Komment megadása kötelező</string>
    <string name="deleted_comment">Ez a komment törölve lett</string>
    <string name="write_a_comment">Írj valamit…</string>
    <string name="edit_comment_dialog_send_button">Szerkesztés</string>
    <string name="edit_comment_dialog_title">Komment szerkesztés</string>
    <string name="details_fragment_edit_comment_dialog_message">Itt változtathatod meg kommented tartalmát.</string>
    <string name="details_fragment_edit_your_comment">Komment</string>
    <string name="caff_details_comments_empty_list_text">Kommentek</string>

    <!-- Download Caff -->
    <string name="caff_details_download_is_in_progress">A letöltés folyamatban...</string>
    <string name="caff_details_download_was_not_successful">A letöltés sikertelen volt.</string>
    <string name="caff_details_download_is_successful">A letöltés befejeződött.</string>
    <string name="caff_details_permission_show_rational">A letöltéshez meg kell adnod az engedélyt a fájlok eléréséhez.</string>
    <string name="caff_details_permission_denied">Fájlok elérése megtagadva.</string>

    <!-- Edit Caff details -->
    <string name="caff_details_edit_caff_dialog_title">Caff adatok megváltoztatása</string>
    <string name="caff_details_edit_caff_save">Mentés</string>
    <string name="caff_details_edit_caff_datas_error">Hiba történt az adatok módosítása közben.</string>

    <!-- Delete Caff file -->
    <string name="caff_details_caff_delete_was_failed">A törlés közben hiba történt.</string>
    <string name="caff_details_delete_caff_file_title">Biztosan törölni szeretnéd ezt a CAFF file-t?</string>
    <string name="caff_details_delete_caff_file_ok_button">Igen</string>
    <string name="caff_details_delete_caff_file_cancel_button">Nem</string>

    <!-- User Data -->
    <string name="user_data_page_title">Felhasználói adatok</string>
    <string name="user_data_username">Felhasználónév :</string>
    <string name="user_data_email">Email cím :</string>
    <string name="user_data_password">Jelszó</string>
    <string name="user_data_changes_saved">Változtatások elmentve.</string>
    <string name="user_data_changes_are_not_saved">Sajnos hiba történt és a változtatások nem lettek elmentve, kérlek próbáld újra</string>
    <string name="user_data_change_username">Felhasználónév megváltoztatása</string>
    <string name="user_data_change_email">Email cím megváltoztatása</string>
    <string name="user_data_change_password">Jelszó megváltoztatása</string>
    <string name="user_data_admin">Admin felület</string>
    <string name="user_data_admin_show_all_users">Összes felhasználó</string>

    <!-- All users -->
    <string name="all_users_page_title">Felhasználók</string>
    <string name="all_users_empty_list_text">Felhasználók</string>
    <string name="user_data_password_successfully_changed">Jelszó sikeresen megváltoztatva</string>

    <!-- Add new caff -->
    <string name="add_new_caff_file_path">File elérési útvonala...</string>
    <string name="add_new_caff_browse">Keresés</string>
    <string name="add_new_caff_caff_title">Cím</string>
    <string name="add_new_caff_caff_tags">tag1, tag2...</string>
    <string name="add_new_caff_upload">Feltöltés</string>
    <string name="add_new_caff_choose_caff_file">Válassz egy CAFF fájlt</string>
    <string name="add_new_caff_write_title">Add meg egy címet</string>
    <string name="caff_fragment_something_went_wrong">Hiba történt, kérlek próbáld újra</string>
</resources>
