<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large"
    android:background="@color/darkGray"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/loginFragmentIconSize"
        android:layout_height="@dimen/loginFragmentIconSize"
        android:layout_margin="@dimen/margin_normal"
        android:contentDescription="Application icon"
        android:src="@drawable/icon_gecko"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/logInWithEmailOrUsernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:background="@color/fillInFieldBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/logInEditTextEmailOrUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_enter_your_email_or_username"
            android:inputType="text"
            android:text="@string/login_fragment_test_email"
            android:textColor="@color/black"
            tools:ignore="Autofill,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logInPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:background="@color/fillInFieldBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInWithEmailOrUsernameContainer">

        <EditText
            android:id="@+id/logInEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_password"
            android:inputType="textPassword"
            android:text="@string/login_fragment_test_password"
            android:textColor="@color/black"
            tools:ignore="Autofill" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSignInFailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:shadowColor="@color/colorAccent"
        android:text="@string/login_fragment_something_went_wrong"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/login_fragment_log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPasswordContainer" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:shadowColor="@color/colorAccent"
        android:text="@string/login_fragment_not_registered"
        android:textAlignment="center"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogIn" />

    <TextView
        android:id="@+id/textViewForgottenPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:shadowColor="@color/colorAccent"
        android:text="@string/login_fragment_forgotten_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSignIn" />

    <LinearLayout
        android:id="@+id/forgottenPasswordFeedbackContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgottenPassword">

        <TextView
            android:id="@+id/forgottenPasswordFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn">

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>