<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/darkGray"
    android:paddingBottom="@dimen/margin_large"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/forgottenPasswordDialogCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/forgottenPasswordDialogTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgottenPasswordDialogTitle"
        app:srcCompat="@drawable/icon_close"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/forgottenPasswordDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_fragment_forgotten_password_dialog_title"
        android:textColor="@color/lightGray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgottenPasswordDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgottenPasswordDialogTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/login_fragment_forgotten_password_dialog_message"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/forgottenPasswordDialogEmailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@color/fillInFieldBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgottenPasswordDialogMessage">

        <EditText
            android:id="@+id/forgottenPasswordDialogEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:ignore="Autofill,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgottenPasswordDialogUsernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@color/fillInFieldBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgottenPasswordDialogEmailContainer">

        <EditText
            android:id="@+id/forgottenPasswordDialogUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_enter_your_username"
            android:inputType="text"
            android:textColor="@color/black"
            tools:ignore="Autofill,TextFields" />
    </LinearLayout>

    <Button
        android:id="@+id/forgottenPasswordDialogSendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@color/blue"
        android:shadowColor="@color/colorAccent"
        android:text="@string/login_fragment_forgotten_password_dialog_send_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgottenPasswordDialogUsernameContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>